tests/baselines/reference/functionOverloads13.errors.txt
tests/cases/compiler/functionOverloads13.ts(1,1): error TS2463: Duplicate overload signature for foo.
tests/cases/compiler/functionOverloads13.ts(2,1): error TS2463: Duplicate overload signature for foo.


==== tests/cases/compiler/functionOverloads13.ts (2 errors) ====
    function foo(bar:number):string;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo.
    function foo(bar:number):number;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo.
    function foo(bar?:number):any { return "" }
    